--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: black;
+  background-color: rgb(238, 140, 140);
 }
 
 .game-name {
@@ -48,10 +48,10 @@ body {
   border: solid;
   border-radius: 10px;
   padding: 10px 35px;
-  background-color: black;
+  background-color: rgb(212, 220, 188);
   margin-left: 210px;
   margin-top: 40px;
-  border-color: rgb(250, 185, 7);
+  border-color: rgb(244, 120, 82);
   border-width: 1px;
 }
 
