--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,10 @@ button {
 button:hover {
   transform: scale(1.1);
 }
+
+.result {
+  margin-top: 5px;
+  color: white;
+  font-size: 20px;
+  margin-left: 10px;
+}
